--- a/locale/fof-nightmode.yml
+++ b/locale/fof-nightmode.yml
@@ -1,4 +1,35 @@
 fof-nightmode:
+    ref:
+        auto: Automatski (bazirano na pregledniku ili opciji uređaja)
+        light: Dnevni Mod
+        dark: Noćni Mod
+
+    admin:
+        settings:
+            modal:
+                title: FoF Night Mode
+                default_theme: Zadana tema foruma
+                default_theme_helper: Zadana tema automatski se postavlja novim korisnicima i gostima.
+                default_theme_important: To će se odraziti i na postojeće korisnike koji nisu ručno odabrali temu!
+                theme_auto: => fof-nightmode.ref.auto
+                theme_light: => fof-nightmode.ref.light
+                theme_dark: => fof-nightmode.ref.dark
     forum:
-        night: Noćni mod
-        day: Dnevni mod
+        day: => fof-nightmode.ref.light
+        night: => fof-nightmode.ref.dark
+
+        user:
+            settings:
+                heading: Teme
+                description: Odaberite temu boje koju želite koristiti na forumu.
+                description2: This theme will be linked to your account and applies to all your devices unless you toggle on the switch below for per device settings.
+                device_specific_setting_checkbox: Use per device settings
+                device_specific_setting_checkbox_tooltip: Your theme choice will be saved individually for each of your devices.
+                options:
+                    auto: => fof-nightmode.ref.auto
+                    day: => fof-nightmode.ref.light
+                    night: => fof-nightmode.ref.dark
+                option_descriptions:
+                    auto: Your theme will be automatically selected based on your browser or device settings. For example, if you have dark mode enabled in iOS, the forums will be dark too.
+                    day: The classic experience which you're used to. Loved and tested.
+                    night: You're a bit of a night owl. You watch over the forum at night, while the birds are sleeping and the foxes are hunting. Or you just prefer the darker colours!
