--- a/locale/fof-links.yml
+++ b/locale/fof-links.yml
@@ -17,19 +17,15 @@ fof-links:
       title: => fof-links.ref.create_link
       title_label: => fof-links.ref.title
       title_placeholder: => fof-links.ref.title
+      icon_label: => core.ref.icon
+      icon_text: => core.ref.icon_text
       url_label: => fof-links.ref.url
       url_placeholder: => fof-links.ref.url
 
     # These strings are used in the Links page.
     links:
-      about_text: Upravljanje vezama s primarnim izbornicima.
       create_button: => fof-links.ref.create_link
       links: => fof-links.ref.links
-
-    # These strings are used in the navigation bar.
-    nav:
-      links_button: => fof-links.ref.links
-      links_text: Upravljajte primarnim stavkama popisa za navigaciju.
 
   # Strings in this namespace are referenced by two or more unique keys.
   ref:
