--- a/locale/fof-cookie-consent.yml
+++ b/locale/fof-cookie-consent.yml
@@ -1,8 +1,6 @@
-reflar-cookie-consent:
+fof-cookie-consent:
   admin:
     settings:
-      title: Reflar Cookie Consent
-
       configuration_title: Opcije konfiguracije
       consentText: Sadržaj poruke
       buttonText: Tekst gumba prihvati
