--- a/locale/fof-recaptcha.yml
+++ b/locale/fof-recaptcha.yml
@@ -1,11 +1,11 @@
 fof-recaptcha:
   admin:
     settings:
-      help_text:Pribavite svoje vjerodajnice za Google reCAPTCHA <a>ovdje</a>.
+      help_text: Pribavite svoje vjerodajnice za Google reCAPTCHA <a>ovdje</a>.
       secret_key_label: Secret Key
       site_key_label: Site Key
       title: FriendsOfFlarum reCAPTCHA
-      type_label: reCAPTCHA Type
+      type_label: Tip reCAPTCHA
 
 validation:
   recaptcha: reCAPTCHA neuspjela provjera.
